--- a/index.html
+++ b/index.html
@@ -48,6 +48,6 @@
 </style>
 </head>
 <body>
-  <a href="https://is.gd/QCIWrJ" target="_blank" rel="noopener noreferrer">Clique aqui</a>
+  <a href="https://is.gd/4ju1vF" target="_blank" rel="noopener noreferrer">Clique aqui</a>
 </body>
 </html>
